Add loading y event emitter in form sidebar.

--- a/projects/tots/form-sidebar-page/src/lib/pages/form-sidebar-page/form-sidebar-page.component.html
+++ b/projects/tots/form-sidebar-page/src/lib/pages/form-sidebar-page/form-sidebar-page.component.html
@@ -11,6 +11,7 @@
         </div>
     </div>
     <div class="form-sidebar-right">
-        <tots-form *ngIf="selectedItem" #form [fields]="selectedItem.fields" [item]="selectedItem.item" (onAction)="onActionForm($event)" [autoSave]="true"></tots-form>
+        <div *ngIf="selectedItem && selectedItem.isLoading" class="form-sidebar-loading">Loading...</div>
+        <tots-form *ngIf="selectedItem && (selectedItem.isLoading == undefined||!selectedItem.isLoading)" #form [fields]="selectedItem.fields" [item]="selectedItem.item" (onAction)="onActionForm($event)" [autoSave]="true"></tots-form>
     </div>
 </div>
