--- a/projects/example/src/app/pages/form-sidebar/form-sidebar.component.html
+++ b/projects/example/src/app/pages/form-sidebar/form-sidebar.component.html
@@ -1,1 +1,1 @@
-<tots-form-sidebar-page [config]="config"></tots-form-sidebar-page>
+<tots-form-sidebar-page [config]="config" (onAction)="onActionForm($event)"></tots-form-sidebar-page>
