Add style in selector menu.

--- a/projects/example/src/app/pages/form-component/form-component.component.html
+++ b/projects/example/src/app/pages/form-component/form-component.component.html
@@ -3,3 +3,6 @@
 
 
 <button (click)="onClickOpenModal()">Prueba de Modal</button>
+
+<h1>Prueba User Selector Menu</h1>
+<tots-users-selector-menu [config]="configUserSelector"></tots-users-selector-menu>
