--- a/projects/tots/users-selector-menu/src/lib/components/users-selector-menu/users-selector-menu.component.html
+++ b/projects/tots/users-selector-menu/src/lib/components/users-selector-menu/users-selector-menu.component.html
@@ -1,1 +1,29 @@
-<p>users-selector-menu works!</p>
+<div class="tots-users-selector-menu-button">
+    <button #selectorButton="matMenuTrigger"  mat-button [matMenuTriggerFor]="selector">
+        <mat-icon *ngIf="config.prependIcon">{{config.prependIcon}}</mat-icon>
+        <span>{{config.textButton}}</span>
+    </button>
+
+    <mat-menu #selector="matMenu" [class]="'container-users-selector-menu'" (closed)="onClosed()">
+        <div class="selector-menu" (click)="$event.stopPropagation()">
+
+            <mat-form-field>
+                <span matPrefix><mat-icon>search</mat-icon></span>
+                <mat-label>Search...</mat-label>
+                <input matInput type="text" [formControl]="inputQuery" [placeholder]="'Search...'"/>
+            </mat-form-field>
+
+            <div class="results-selector-menu">
+                <div class="not-results">Ninguna persona coincide con tu busqueda.</div>
+                <div class="item-result selected">
+                    <div class="item-result-image">
+                        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="image">
+                    </div>
+                    <div class="item-result-info">
+                        <div class="item-result-info-name">Axel Camiletti</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </mat-menu>
+</div>
