--- a/projects/tots/form/src/lib/fields/row-field/row-field.component.scss
+++ b/projects/tots/form/src/lib/fields/row-field/row-field.component.scss
@@ -1,6 +1,11 @@
+.tots-row-field {
+    display: flex;
+}
+
 .tots-field-main-container {
     display: flex;
     width: 100%;
+    margin-left: 24px;
 
     tots-base-print-field {
         width: 1px;
@@ -16,4 +21,8 @@
     .tots-field-print-container {
         width: 100%;
     }
+}
+
+.tots-field-main-container:first-child {
+    margin-left: 0;
 }
