--- a/projects/tots/form/src/lib/components/tots-form/tots-form.component.html
+++ b/projects/tots/form/src/lib/components/tots-form/tots-form.component.html
@@ -1,6 +1,9 @@
 <form [formGroup]="group">
     <div class="tots-form-print">
-        <tots-base-print-field *ngFor="let field of fields" [field]="field" [group]="group" [onAction]="privateActions"></tots-base-print-field>
+        <div *ngFor="let field of fields" class="tots-field-main-container">
+            <mat-icon *ngIf="isHasIcon(field)">{{getIconField(field)}}</mat-icon>
+            <div class="tots-field-print-container"><tots-base-print-field [field]="field" [group]="group" [onAction]="privateActions"></tots-base-print-field></div>
+        </div>
     </div>
 
     <!--<div *ngIf="!group.valid && !isFirstStart" class="message-error">
