--- a/projects/tots/form/src/lib/fields/files-list-field/files-list-field.component.html
+++ b/projects/tots/form/src/lib/fields/files-list-field/files-list-field.component.html
@@ -1,6 +1,6 @@
 <div class="tots-files-list-field">
     <input type="hidden" [formControl]="input" />
-    <input #inputFile type="file" accept="image/png, image/jpeg, image/gif" style="display: none;" (change)="onChange($event.target)">
+    <input #inputFile type="file" style="display: none;" (change)="onChange($event.target)">
 
     <div class="tots-header-files">
         <h6>{{field.label}}</h6>
