Create day selector menu library.

--- a/projects/example/src/app/pages/form-component/form-component.component.html
+++ b/projects/example/src/app/pages/form-component/form-component.component.html
@@ -6,3 +6,6 @@
 
 <h1>Prueba User Selector Menu</h1>
 <tots-users-selector-menu [config]="configUserSelector"></tots-users-selector-menu>
+
+<h1>Prueba Day Selector Menu</h1>
+<tots-day-selector-menu [initValue]="dateNow" (changeDate)="onChangeDate($event)"></tots-day-selector-menu>
