--- a/projects/example/src/app/pages/form-component/form-component.component.html
+++ b/projects/example/src/app/pages/form-component/form-component.component.html
@@ -9,3 +9,6 @@
 
 <h1>Prueba Day Selector Menu</h1>
 <tots-day-selector-menu [initValue]="dateNow" (changeDate)="onChangeDate($event)"></tots-day-selector-menu>
+
+<h1>Prueba Range Date Menu</h1>
+<tots-range-date-selector-menu></tots-range-date-selector-menu>
