--- a/projects/tots/form/src/lib/modals/tots-form-modal/tots-form-modal.component.html
+++ b/projects/tots/form/src/lib/modals/tots-form-modal/tots-form-modal.component.html
@@ -2,3 +2,4 @@
 <div mat-dialog-content>
     <tots-form #form [fields]="data.fields" [item]="data.item" (onAction)="onActionForm($event)" [autoSave]="data.autoSave ?? false"></tots-form>
 </div>
+<tots-loading-factory *ngIf="isLoading" [type]="typeLoading" [color]="colorLoading" [isFullPage]="true"></tots-loading-factory>
