Fix resend form after error.

--- a/projects/example/src/app/pages/form-component/form-component.component.html
+++ b/projects/example/src/app/pages/form-component/form-component.component.html
@@ -3,6 +3,7 @@
 
 
 <button (click)="onClickOpenModal()">Prueba de Modal</button>
+<button (click)="onClickOpenModalApi()">Prueba de Modal API</button>
 
 <h1>Prueba User Selector Menu</h1>
 <tots-users-selector-menu [config]="configUserSelector"></tots-users-selector-menu>
