--- a/projects/tots/date-field-form/src/lib/fields/datepicker-and-time-end-field/datepicker-and-time-end-field.component.css
+++ b/projects/tots/date-field-form/src/lib/fields/datepicker-and-time-end-field/datepicker-and-time-end-field.component.css
@@ -3,3 +3,7 @@ mat-form-field { width: 100%; }
 .tots-time-picker-container {
     display: flex;
 }
+
+.tots-time-input-end {
+    margin-left: 24px;
+}
