--- a/projects/tots/form/src/lib/fields/select-field/select-field.component.html
+++ b/projects/tots/form/src/lib/fields/select-field/select-field.component.html
@@ -6,4 +6,5 @@
     </mat-select>
 
     <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
+    <mat-error *ngIf="hasError()">{{getMessageError()}}</mat-error>
 </mat-form-field>
