--- a/projects/tots/form/src/lib/fields/string-field/string-field.component.html
+++ b/projects/tots/form/src/lib/fields/string-field/string-field.component.html
@@ -2,4 +2,5 @@
     <mat-label *ngIf="field.label"> {{ field.label }} </mat-label>
     <input matInput type="text" [formControl]="input" [placeholder]="getPlaceholder()"/>
     <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
+    <mat-error *ngIf="hasError()">{{getMessageError()}}</mat-error>
 </mat-form-field>
