--- a/projects/tots/form/src/lib/fields/toggle-field/toggle-field.component.html
+++ b/projects/tots/form/src/lib/fields/toggle-field/toggle-field.component.html
@@ -1,1 +1,1 @@
-<mat-slide-toggle (change)="onChange($event)">{{ field.label }}</mat-slide-toggle>
+<mat-slide-toggle [color]="matColor" [formControl]="input">{{ field.label }}</mat-slide-toggle>
