--- a/projects/tots/form/src/lib/modals/tots-form-modal/tots-form-modal.component.html
+++ b/projects/tots/form/src/lib/modals/tots-form-modal/tots-form-modal.component.html
@@ -1,5 +1,7 @@
-<h1 mat-dialog-title>{{data.title}}</h1>
-<div mat-dialog-content>
-    <tots-form #form [fields]="data.fields" [item]="data.item" (onAction)="onActionForm($event)" [autoSave]="data.autoSave ?? false"></tots-form>
+<div #dialog>
+    <h1 mat-dialog-title>{{data.title}}</h1>
+    <div mat-dialog-content>
+        <tots-form #form [fields]="data.fields" [item]="data.item" (onAction)="onActionForm($event)" [autoSave]="data.autoSave ?? false"></tots-form>
+    </div>
+    <tots-loading-factory *ngIf="isLoading" [type]="typeLoading" [color]="colorLoading" [isFullPage]="true"></tots-loading-factory>
 </div>
-<tots-loading-factory *ngIf="isLoading" [type]="typeLoading" [color]="colorLoading" [isFullPage]="true"></tots-loading-factory>
