form wizard upgrade

--- a/projects/example/src/app/pages/form-wizard/form-wizard.component.html
+++ b/projects/example/src/app/pages/form-wizard/form-wizard.component.html
@@ -1,1 +1,3 @@
-<tots-form-wizard [config]="config" (onAction)="onActionForm($event)"></tots-form-wizard>
+<div class="container">
+    <tots-form-wizard #wizardForm [config]="config" (onAction)="onActionForm($event)"></tots-form-wizard>
+</div>
