expression changed after chcked fix attempt

--- a/projects/example/src/app/pages/form-wizard/form-wizard.component.html
+++ b/projects/example/src/app/pages/form-wizard/form-wizard.component.html
@@ -1,3 +1,4 @@
 <div class="container">
     <tots-form-wizard #wizardForm [config]="config" (onAction)="onActionForm($event)"></tots-form-wizard>
+    <button (click)="getForm()">get form</button>
 </div>
