--- a/projects/tots/form/src/lib/fields/button-toggle-field/button-toggle-field.component.html
+++ b/projects/tots/form/src/lib/fields/button-toggle-field/button-toggle-field.component.html
@@ -1,4 +1,9 @@
-<p *ngIf="field.label"> {{ field.label }} </p>
+<tots-outer-label
+    *ngIf="field.label"
+    [label]="field.label"
+    [isRequired]="isRequired()"
+></tots-outer-label>
+
 <mat-button-toggle-group [formControl]="input">
     <mat-button-toggle *ngFor="let option of field.extra.options" [value]="option.id">{{ option.title }}</mat-button-toggle>
 </mat-button-toggle-group>
