--- a/projects/tots/form/src/lib/fields/select-field/select-field.component.html
+++ b/projects/tots/form/src/lib/fields/select-field/select-field.component.html
@@ -1,5 +1,11 @@
+<tots-outer-label
+    *ngIf="field.label && totsFormDefaultConfig.labelPosition==eTotsFormLabelPosition.ABOVE"
+    [label]="field.label"
+    [isRequired]="isRequired()"
+></tots-outer-label>
+
 <mat-form-field *ngIf="input" [appearance]="getAppearance()" class="{{getClases()}}">
-    <mat-label *ngIf="field.label"> {{ field.label }} </mat-label>
+    <mat-label *ngIf="field.label && totsFormDefaultConfig.labelPosition==eTotsFormLabelPosition.INSIDE"> {{ field.label }} </mat-label>
 
     <mat-select [formControl]="input" [placeholder]="getPlaceholder()" [multiple]="isMultiple()">
         <mat-option *ngFor="let option of field.extra.options" [value]="option.id"> {{ option.title }} </mat-option>
