--- a/projects/tots/form/src/lib/fields/string-field/string-field.component.html
+++ b/projects/tots/form/src/lib/fields/string-field/string-field.component.html
@@ -1,5 +1,11 @@
+<tots-outer-label
+    *ngIf="field.label && totsFormDefaultConfig.labelPosition==eTotsFormLabelPosition.ABOVE"
+    [label]="field.label"
+    [isRequired]="isRequired()"
+></tots-outer-label>
+
 <mat-form-field *ngIf="input" class="{{getClases()}}" [appearance]="getAppearance()">
-    <mat-label *ngIf="field.label"> {{ field.label }} </mat-label>
+    <mat-label *ngIf="field.label && totsFormDefaultConfig.labelPosition==eTotsFormLabelPosition.INSIDE"> {{ field.label }} </mat-label>
     <input matInput type="text" [formControl]="input" [placeholder]="getPlaceholder()"/>
     <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
     <mat-error *ngIf="hasError()">{{getMessageError()}}</mat-error>
