--- a/projects/tots/form/src/lib/fields/textarea-field/textarea-field.component.html
+++ b/projects/tots/form/src/lib/fields/textarea-field/textarea-field.component.html
@@ -6,7 +6,7 @@
 
 <mat-form-field *ngIf="input" class="{{getClases()}}" [appearance]="getAppearance()">
     <mat-label *ngIf="field.label && totsFormDefaultConfig.labelPosition==eTotsFormLabelPosition.INSIDE"> {{ field.label }} </mat-label>
-    <textarea matInput [formControl]="input" [placeholder]="getPlaceholder()"></textarea>
-    <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
+    <textarea matInput [rows]="rows" [formControl]="input" [placeholder]="getPlaceholder()"></textarea>
+    <mat-hint *ngIf="hint" [align]="'end'"> {{hint}} </mat-hint>
     <mat-error *ngIf="hasError()">{{getMessageError()}}</mat-error>
 </mat-form-field>
