--- a/projects/tots/form/src/lib/fields/radio-group-field/radio-group-field.component.html
+++ b/projects/tots/form/src/lib/fields/radio-group-field/radio-group-field.component.html
@@ -1,4 +1,6 @@
-<mat-radio-group class="flex_column" [formControl]="input" [ngClass]="{vertical: alignment=='vertical'}">
+<label>{{field.label}}</label>
+
+<mat-radio-group [formControl]="input" [ngClass]="{vertical: alignment=='vertical'}">
     <mat-radio-button *ngFor="let o of options" [value]="o.value">
         {{o.caption}}
     </mat-radio-button>
