--- a/projects/tots/date-field-form/src/lib/fields/datepicker-field/datepicker-field.component.html
+++ b/projects/tots/date-field-form/src/lib/fields/datepicker-field/datepicker-field.component.html
@@ -6,7 +6,7 @@
 
 <mat-form-field *ngIf="input" class="{{getClases()}}" (click)="picker.open()" [appearance]="getAppearance()">
     <mat-label *ngIf="field.label && totsFormDefaultConfig.labelPosition==eTotsFormLabelPosition.INSIDE"> {{ field.label }} </mat-label>
-    <input matInput [matDatepicker]="picker" [formControl]="input" [placeholder]="getPlaceholder()" [min]="getMinDate()">
+    <input matInput [matDatepicker]="picker" [formControl]="input" [placeholder]="getPlaceholder()" [min]="minDate" [max]="maxDate">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
     <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
