--- a/projects/example/src/app/pages/form-component/form-component.component.html
+++ b/projects/example/src/app/pages/form-component/form-component.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <h1>Formulario de ejemplo:</h1>
-    <tots-form #form [fields]="fields" [item]="item" (onAction)="onActionForm($event)"></tots-form>
+    <tots-form #form [fields]="fields" [item]="item" (onAction)="onActionForm($event)" [loading]="loading"></tots-form>
     
-    
+    <!--
     <button (click)="onClickOpenModal()">Prueba de Modal</button>
     <button (click)="onClickOpenModalApi()">Prueba de Modal API</button>
     
@@ -14,4 +14,5 @@
     
     <h1>Prueba Range Date Menu</h1>
     <tots-range-date-selector-menu></tots-range-date-selector-menu>
+    -->
 </div>
