--- a/projects/tots/form/src/lib/fields/submit-and-cancel-buttons-field/submit-and-cancel-buttons-field.component.css
+++ b/projects/tots/form/src/lib/fields/submit-and-cancel-buttons-field/submit-and-cancel-buttons-field.component.css
@@ -1,4 +1,20 @@
 .submit_and_cancel_wrapper {
     display: flex;
+    gap: 24px;
+}
+
+.mat-mdc-button-base {
+    width: 100%;
+    height: 42px !important;
+    line-height: 42px !important;
+}
+
+.mat-mdc-button-base .mdc-button__label {
+    display: flex;
     gap: 12px;
+    align-items: center;
+}
+
+.mat-mdc-button-base .mdc-button__label .mat-mdc-button-touch-target {
+    height: 100%;
 }
