--- a/projects/tots/form/src/lib/fields/submit-button-field/submit-button-field.component.html
+++ b/projects/tots/form/src/lib/fields/submit-button-field/submit-button-field.component.html
@@ -8,8 +8,14 @@
       }"
     type="button"
     [color]="matColor"
-    [disabled]="!group.valid"
+    [disabled]="!group.valid || group.disabled"
     (click)="onClick()"
 >
     {{ field.label }}
+
+    <mat-icon iconPositionEnd *ngIf="matIcon && !group.disabled">
+        {{ matIcon }}
+    </mat-icon>
+	<mat-spinner *ngIf="group.disabled" diameter="18" strokeWidth="1.5"></mat-spinner>
+
 </button>
