First version wizard dynamic.

--- a/projects/tots/form-wizard/src/lib/components/form-wizard/form-wizard.component.html
+++ b/projects/tots/form-wizard/src/lib/components/form-wizard/form-wizard.component.html
@@ -10,7 +10,7 @@
 
   <div class="tots-body-wizard-form">
     <div *ngIf="selectedItem && selectedItem.isLoading" class="form-sidebar-loading">Loading...</div>
-    <tots-form *ngIf="selectedItem && (selectedItem.isLoading == undefined||!selectedItem.isLoading)" #form [fields]="selectedItem.fields" [item]="config.item" (onAction)="onActionForm($event)" [autoSave]="true"></tots-form>
+    <tots-form *ngIf="selectedItem && (selectedItem.isLoading == undefined||!selectedItem.isLoading)" #form [fields]="selectedItem.fields ?? []" [item]="config.item" (onAction)="onActionForm($event)" [autoSave]="true"></tots-form>
   </div>
 
   <div class="tots-actions-wizard-form">
