--- a/projects/example/src/app/pages/form-wizard/form-wizard.component.html
+++ b/projects/example/src/app/pages/form-wizard/form-wizard.component.html
@@ -1,1 +1,2 @@
 <tots-form-wizard [config]="config" (onAction)="onActionForm($event)"></tots-form-wizard>
+<tots-form-wizard [config]="configDynamic" (onAction)="onActionForm($event)"></tots-form-wizard>
