tots form modal panelClass

--- a/projects/example/src/styles.scss
+++ b/projects/example/src/styles.scss
@@ -13,3 +13,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
     --tots-form-sidebar-bg-item-active: #9F8D84;
     --tots-form-sidebar-border-item: #F4DED3;
 }
+
+.test_class {
+    outline: 2px solid gold;
+}
