autocomplete updated logic and added error message

--- a/projects/tots/form/src/lib/fields/autocomplete-obs-field/autocomplete-obs-field.component.html
+++ b/projects/tots/form/src/lib/fields/autocomplete-obs-field/autocomplete-obs-field.component.html
@@ -14,4 +14,5 @@
   </button>
 
   <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
+  <mat-error *ngIf="hasError()">{{getMessageError()}}</mat-error>
 </mat-form-field>
