--- a/projects/tots/form/src/lib/fields/autocomplete-list-field/autocomplete-list-field.component.html
+++ b/projects/tots/form/src/lib/fields/autocomplete-list-field/autocomplete-list-field.component.html
@@ -10,6 +10,7 @@
     </mat-autocomplete>
 
     <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
+    <mat-error *ngIf="hasError()">{{getMessageError()}}</mat-error>
 </mat-form-field>
 
 <div class="tots-autocomplete-list">
