--- a/projects/tots/form/src/lib/fields/autocomplete-obs-field/autocomplete-obs-field.component.html
+++ b/projects/tots/form/src/lib/fields/autocomplete-obs-field/autocomplete-obs-field.component.html
@@ -4,15 +4,15 @@
   <input matInput type="text" [formControl]="inputQuery" [matAutocomplete]="autoInput" [placeholder]="getPlaceholder()">
 
   <mat-autocomplete #autoInput="matAutocomplete" [displayWith]="displayOption.bind(this)" (optionSelected)="selectedOption($event)">
-    <mat-option *ngFor="let item of filteredOptions | async" [value]="item">
+    <mat-option *ngFor="let item of filteredOptions" [value]="item">
       {{ displayOption(item) }}
     </mat-option>
   </mat-autocomplete>
 
-  <button *ngIf="input.value" matSuffix mat-icon-button aria-label="Clear" (click)="inputQuery.setValue('');input.setValue(null)">
+  <button *ngIf="input.value && (!isLoading || !isWithLoader)" matSuffix mat-icon-button aria-label="Clear" (click)="inputQuery.setValue('');input.setValue(null)">
     <mat-icon>close</mat-icon>
   </button>
-
+  <mat-spinner style="padding-right: 16px;" matSuffix *ngIf="isLoading && isWithLoader" diameter="30"></mat-spinner>
   <mat-hint *ngIf="getCaption() != ''" [align]="'end'"> {{getCaption()}} </mat-hint>
   <mat-error *ngIf="hasError()">{{getMessageError()}}</mat-error>
 </mat-form-field>
