show not found message logic updated
Por defecto no se mostrará el mensaje y ahora se podrá mandar un mensaje personalizado. Si se desea probar, en el boton de "Prueba de Modal API" estará disponible.

--- a/projects/tots/form/src/lib/fields/autocomplete-obs-field/autocomplete-obs-field.component.html
+++ b/projects/tots/form/src/lib/fields/autocomplete-obs-field/autocomplete-obs-field.component.html
@@ -4,7 +4,7 @@
   <input matInput type="text" [formControl]="inputQuery" [matAutocomplete]="autoInput" [placeholder]="getPlaceholder()">
 
   <mat-autocomplete #autoInput="matAutocomplete" [displayWith]="displayOption.bind(this)" (optionSelected)="selectedOption($event)">
-    <mat-option [disabled]="item === NO_RESULTS_TEXT" *ngFor="let item of filteredOptions" [value]="item">
+    <mat-option [disabled]="item === notFoundMessage" *ngFor="let item of filteredOptions" [value]="item">
       {{ displayOption(item) }}
     </mat-option>
   </mat-autocomplete>
